--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,27 @@ numpy = "^1.26.2"
 scikit-learn = "^1.3.2"
 lightgbm = "^4.2.0"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.6.0"
+
+[tool.black]
+line-length = 90
+target-version = ["py310"]
+
+[tool.isort]
+src_paths = ["ds_project"]
+profile = "black"
+line_length = 90
+lines_after_imports = 2
+
+[tool.flake8]
+ignore = ['E203', 'E501', 'W503', 'B950']
+per-file-ignores = [
+    '__init__.py:F401',
+]
+max-line-length = 90
+max-complexity = 12
+select = ['B', 'C', 'E', 'F', 'W', 'B9']
 
 [build-system]
 requires = ["poetry-core"]
