--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ numpy = "^1.26.3"
 scikit-learn = "^1.3.2"
 lightgbm = "^4.2.0"
 hydra-core = "^1.3.2"
+mlflow = "^2.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
